--- a/방문.html
+++ b/방문.html
@@ -6,7 +6,7 @@
   <title>방문 안내 | 가시림</title>
   <meta name="description" content="가시림 방문 안내 — 이용 요금, 오시는 길, 단체 예약 및 문의 정보를 확인하세요." />
   <link rel="icon" href="assets/img/logo_tree_square.png" type="image/svg+xml">  
-  <link rel="apple-touch-icon" href="assets/img/logo_tree_square.png">  <link rel="apple-touch-icon" href="assets/img/logo_tree_square.png">
+  <link rel="apple-touch-icon" href="assets/img/logo_tree_square.png">
   <!-- Preload the big header background (faster perceived load) -->
   <link rel="preload" as="image" href="assets/img/pageheader/visit-page.jpg">
 
@@ -30,6 +30,7 @@
     <main class="visit-main" aria-labelledby="visit-heading">
 
       <section class="visit-overview" aria-labelledby="visit-heading">
+
         <nav class="visit-overview__tags" aria-label="방문 안내 섹션">
           <a class="visit-tag" href="#운영시간">운영 시간</a>
           <a class="visit-tag" href="#이용요금">이용 요금</a>
@@ -224,7 +225,7 @@
           <p class="visit-section__lead">기업 워크숍, 원예 클래스, 스냅 촬영 등 목적에 맞춘 맞춤형 프로그램과 공간을 제안해 드립니다. 방문 희망일과 인원, 요청 사항과 함께 연락주세요.</p>
         </div>
 
-        <div class="visit-section__grid">
+        <div class="visit-section__grid contact-grid">
           <article class="contact-card">
             <span class="contact-card__icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" focusable="false">
