--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
       <!-- SECTION 4: Facilities -->
       <section class="article article-container reveal from-up">
         <p class="home-programs__eyebrow center">SPACES</p>
-        <h class="space-card__title center">주요 시설</h>
+        <h2 class="space-section__title">주요 시설</h2>
         <section class="facility-grid">
-          <a class="facility-card" data-category="experience">
+          <a class="facility-card" data-category="experience" href="소개.html?space=식물판매장#공간소개" aria-label="식물판매장 자세히 보기">
             <div class="facility-card__media">
               <div class="facility-card__media img">
                 <img src="assets/img/facility/facility2.png" alt="식물판매장" loading="lazy">
@@ -185,7 +185,7 @@
               </div>
             </div>
           </a>
-          <a class="facility-card" data-category="experience">
+          <a class="facility-card" data-category="experience" href="소개.html?space=명상스튜디오#공간소개" aria-label="명상스튜디오 자세히 보기">
             <div class="facility-card__media">
               <img src="assets/img/facility/facility1.png" alt="명상스튜디오" loading="lazy"></img>
               <div class="facility-card__overlay">
@@ -193,7 +193,7 @@
               </div>
             </div>
           </a>
-          <a class="facility-card" data-category="experience">
+          <a class="facility-card" data-category="experience" href="소개.html?space=카페#공간소개" aria-label="카페 자세히 보기">
             <div class="facility-card__media">
               <div class="facility-card__media img">
                 <img src="assets/img/facility/facility3.png" alt="카페" loading="lazy">
@@ -203,7 +203,7 @@
               </div>
             </div>
           </a>
-          <a class="facility-card" data-category="experience">
+          <a class="facility-card" data-category="experience" href="소개.html?space=체험장#공간소개" aria-label="체험장 자세히 보기">
             <div class="facility-card__media">
               <div class="facility-card__media img">
                 <img src="assets/img/facility/facility4.png" alt="체험장" loading="lazy">
