--- a/shop.html
+++ b/shop.html
@@ -28,14 +28,6 @@
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="shop-main" aria-labelledby="shop-heading">
-      <section class="shop-overview">
-        <div class="shop-overview__inner">
-          <p class="shop-overview__eyebrow">Shop</p>
-          <h2 class="shop-overview__title" id="shop-heading">가시림의 자연을 닮은 오브제로 공간을 채우다</h2>
-          <p class="shop-overview__description">가시림의 자연을 담은 여러 상품 들을 만나보세요. 가시림의 동백꽃으로 블렌딩한 가시림 시그니쳐 티 (茶) 부터, 이끼 화분, 고사리 화분, 희귀 종자들까지. 작은 아이템들로 일상의 시간을 특별하게 채워보세요.</p>
-        </div>
-      </section>
-
       <section id="shop-catalog" class="shop-catalog" aria-label="가시림 상품 목록">
         <div class="shop-catalog__header">
           <div class="shop-filters" role="group" aria-label="상품 분류">
@@ -53,20 +45,11 @@
               <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">상품 준비 중</h3>
-              <p class="product-card__description">명상 프로그램을 닮은 상품을 준비하고 있습니다. 곧 안내드릴게요.</p>
-              <p class="product-card__price">가격 미정</p>
-            </div>
-          </div>
-
-          <div class="product-card" data-category="plant_pot">
-            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
-              <span>상품 준비 중</span>
-            </figure>
-            <div class="product-card__copy">
-              <h3 class="product-card__title">상품 준비 중</h3>
               <p class="product-card__description">숲 명상에서 영감을 받은 새로운 굿즈를 제작 중입니다.</p>
-              <p class="product-card__price">가격 미정</p>
+              <div class="product-card__purchase">
+                <p class="product-card__price">가격 미정</p>
+                <a class="product-card__cta" href="https://store.gasirim.kr" target="_blank" rel="noopener noreferrer">더보기</a>
+              </div>
             </div>
           </div>
 
@@ -75,9 +58,11 @@
               <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">상품 준비 중</h3>
               <p class="product-card__description">가시림의 식물과 함께할 가드닝 키트를 준비하고 있습니다.</p>
-              <p class="product-card__price">가격 미정</p>
+              <div class="product-card__purchase">
+                <p class="product-card__price">가격 미정</p>
+                <a class="product-card__cta" href="https://store.gasirim.kr" target="_blank" rel="noopener noreferrer">더보기</a>
+              </div>
             </div>
           </div>
 
@@ -86,11 +71,14 @@
               <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">상품 준비 중</h3>
               <p class="product-card__description">가시림 블렌딩 티를 새롭게 선보일 예정입니다.</p>
-              <p class="product-card__price">가격 미정</p>
+              <div class="product-card__purchase">
+                <p class="product-card__price">가격 미정</p>
+                <a class="product-card__cta" href="https://store.gasirim.kr" target="_blank" rel="noopener noreferrer">더보기</a>
+              </div>
             </div>
           </div>
+        </div>
       </section>
     </main>
 
