--- a/소개.html
+++ b/소개.html
@@ -47,7 +47,8 @@
           <article class="space-card" role="button" tabindex="0" 
             data-space-type="facility" 
             data-images="assets/img/유리온실.jpg,assets/img/유리온실2.jpg,assets/img/가든센터.jpg" 
-            data-title="체험장" 
+            data-title="유리 온실"
+            data-space-id="명상스튜디오"
             data-desc="가시림의 자연에 둘러싸인 유리온실로, 정규 명상 수업이 열리는 공간입니다. 햇빛과 식물이 어우러진 평온한 분위기 속에서 깊은 호흡과 이완을 경험할 수 있습니다.">
             <figure class="space-card__media">
               <img src="assets/img/유리온실.jpg" alt="가시림 유리 온실 내부" loading="lazy"/>
@@ -61,7 +62,8 @@
           <article class="space-card" role="button" tabindex="0" 
             data-space-type="facility" 
             data-images="assets/img/가든센터.jpg,assets/img/유리온실.jpg,assets/img/유리온실2.jpg" 
-            data-title="체험장" 
+            data-title="체험장"
+            data-space-id="체험장"
             data-desc="화분 만들기, 정원 워크숍 등 원예 중심의 체험 프로그램이 운영됩니다. 베테랑 조경 전문가와 함께 식물의 세계를 배우며 특별한 시간을 보내보세요.">
             <figure class="space-card__media">
               <img src="assets/img/가든센터.jpg" alt="가시림 가든센터 외관" loading="lazy"/>
@@ -75,7 +77,8 @@
           <article class="space-card" role="button" tabindex="0" 
             data-space-type="facility" 
             data-images="assets/img/유리온실2.jpg,assets/img/main.jpg,assets/img/카페.jpg" 
-            data-title="식물판매장" 
+            data-title="식물판매장"
+            data-space-id="식물판매장"
             data-desc="제주 자생식물을 비롯한 다양한 희귀 식물을 판매합니다. 식물 관리 안내와 함께 택배 및 항공 운송용 포장 서비스를 제공합니다.">
             <figure class="space-card__media">
               <img src="assets/img/유리온실2.jpg" alt="식물판매장" loading="lazy"/>
@@ -89,7 +92,8 @@
           <article class="space-card" role="button" tabindex="0" 
             data-space-type="facility" 
             data-images="assets/img/카페.jpg,assets/img/main.jpg,assets/img/가든센터.jpg" 
-            data-title="카페" 
+            data-title="카페"
+            data-space-id="카페"
             data-desc="가시림 수목원의 여유로운 실내 휴식 공간입니다. 곶자왈 정원을 바라보며 스페셜티 차와 프리미엄 로스팅 원두로 내린 커피를 즐길 수 있습니다.">
             <figure class="space-card__media">
               <img src="assets/img/카페.jpg" alt="가시림 카페" loading="lazy"/>
