--- a/방문.html
+++ b/방문.html
@@ -27,20 +27,18 @@
     <div id="site-header" data-include="partials/header-site.html" data-hero-title="방문안내" data-hero-eyebrow="VISIT" data-hero-image="assets/img/pageheader/visit-page.jpg" data-hero-alt="가시림 방문 안내 헤더 이미지"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
-    <main class="visit-main" aria-labelledby="visit-heading">
+    <main aria-labelledby="visit-heading">
+      <h1 id="visit-heading" class="sr-only">방문 안내</h1>
 
-      <section class="visit-overview" aria-labelledby="visit-heading">
+      <nav class="intro-tabs intro-tabs--section visit-tabs" data-tabs role="tablist" aria-label="방문 안내 섹션">
+        <button class="tab-button active" type="button" role="tab" id="visit-tab-hours" aria-controls="visit-hours" aria-selected="true" data-hash="visit-hours">운영 안내</button>
+        <button class="tab-button" type="button" role="tab" id="visit-tab-rates" aria-controls="visit-rates" aria-selected="false" data-hash="visit-rates">이용 요금</button>
+        <button class="tab-button" type="button" role="tab" id="visit-tab-guides" aria-controls="visit-guides" aria-selected="false" data-hash="visit-guides">방문 전 안내</button>
+        <button class="tab-button" type="button" role="tab" id="visit-tab-amenities" aria-controls="visit-amenities" aria-selected="false" data-hash="visit-amenities">편의 시설</button>
+        <button class="tab-button" type="button" role="tab" id="visit-tab-contact" aria-controls="visit-contact" aria-selected="false" data-hash="visit-contact">문의</button>
+      </nav>
 
-        <nav class="intro-tabs intro-tabs--section visit-tabs" data-tabs role="tablist" aria-label="방문 안내 섹션">
-          <button class="tab-button active" type="button" role="tab" id="visit-tab-hours" aria-controls="visit-hours" aria-selected="true" data-hash="visit-hours">운영 안내</button>
-          <button class="tab-button" type="button" role="tab" id="visit-tab-rates" aria-controls="visit-rates" aria-selected="false" data-hash="visit-rates">이용 요금</button>
-          <button class="tab-button" type="button" role="tab" id="visit-tab-guides" aria-controls="visit-guides" aria-selected="false" data-hash="visit-guides">방문 전 안내</button>
-          <button class="tab-button" type="button" role="tab" id="visit-tab-amenities" aria-controls="visit-amenities" aria-selected="false" data-hash="visit-amenities">편의 시설</button>
-          <button class="tab-button" type="button" role="tab" id="visit-tab-directions" aria-controls="visit-directions" aria-selected="false" data-hash="visit-directions">오시는 길</button>
-          <button class="tab-button" type="button" role="tab" id="visit-tab-contact" aria-controls="visit-contact" aria-selected="false" data-hash="visit-contact">문의</button>
-        </nav>
-      </section>
-
+      <div class="visit-main">
       <section id="visit-hours" class="tab-panel tab-panel--section" role="tabpanel" tabindex="0">
         <div class="visit-section visit-section--운영시간" aria-labelledby="section-운영시간">
           <div class="visit-section__header">
@@ -50,6 +48,7 @@
           <div class="운영시간__grid">
             <figure class="운영시간__image">
               <img src="assets/img/ticketoffice.jpg" alt="가시림 매표소 앞 사진" loading="lazy" />
+              <figcaption class="운영시간__caption">가시림 입구 및 매표소</figcaption>
             </figure>
             <article class="visit-hours-card" aria-label="운영 정보">
               <dl class="visit-hours-list">
@@ -66,6 +65,29 @@
                   <dd>오후 05:30</dd>
                 </div>
               </dl>
+              <div class="visit-hours-alerts" role="status" aria-live="polite">
+                <div class="visit-hours-alert">
+                  <span class="visit-hours-alert__icon" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" focusable="false">
+                      <rect x="4" y="5" width="16" height="11" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="1.6"/>
+                      <line x1="4" y1="10.5" x2="20" y2="10.5" stroke="currentColor" stroke-width="1.6"/>
+                      <circle cx="9" cy="17" r="1.2" fill="currentColor"/>
+                      <circle cx="15" cy="17" r="1.2" fill="currentColor"/>
+                    </svg>
+                  </span>
+                  <p class="visit-hours-note">표선·서귀포 방면 버스는 배차 간격이 깁니다. 방문 전 제주 시외버스 시간표를 확인하시길 추천드립니다.</p>
+                </div>
+                <div class="visit-hours-alert">
+                  <span class="visit-hours-alert__icon" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" focusable="false">
+                      <path d="M4 12a5 5 0 0 1 5-5h6a5 5 0 0 1 0 10H7" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M16 17c-1.2-1.4-2.8-2.1-4.8-2.1" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+                      <line x1="6" y1="18.5" x2="11" y2="18.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+                    </svg>
+                  </span>
+                  <p class="visit-hours-note">기상 악화 시 일부 야외 동선을 통제할 수 있으며, 사전 예약 고객에게는 일정 변경·환불 옵션을 안내해드립니다.</p>
+                </div>
+              </div>
             </article>
           </div>
         </div>
@@ -126,28 +148,28 @@
             <h2 id="section-guides" class="visit-section__title">방문 전 알아두기</h2>
           </div>
           <div class="visit-guideline-list">
-            <details class="visit-guideline">
+            <details class="visit-guideline" open>
               <summary>당일 재입장</summary>
               <div class="visit-guideline__body">
                 <p>재입장은 불가능한 점 이해 부탁드립니다.</p>
               </div>
             </details>
-            <details class="visit-guideline">
-              <summary>체험 프로그램</summary>
-              <div class="visit-guideline__body">
-                <p>원예 클래스, 숲 해설 등 프로그램은 사전 예약제로 운영됩니다. 예약 확정 후 방문해 주시면 준비된 재료와 안내를 제공해 드립니다.</p>
-              </div>
-            </details>
-            <details class="visit-guideline">
+            <details class="visit-guideline" open>
               <summary>촬영 및 대관</summary>
               <div class="visit-guideline__body">
                 <p>스냅 촬영, 방송 촬영 등 상업 목적 촬영은 허가가 필요합니다. 일정과 목적을 <a href="#visit-contact">문의 채널</a>로 보내주시면 담당자가 확인 후 회신드립니다.</p>
               </div>
             </details>
-            <details class="visit-guideline">
+            <details class="visit-guideline" open>
               <summary>안전 수칙</summary>
               <div class="visit-guideline__body">
                 <p>관람 동선 내에서는 지정된 산책로를 이용해 주시고, 식물 채집 및 반출은 금지되어 있습니다. 반려동물은 목줄 착용 및 배변 봉투 지참이 필수입니다.</p>
+              </div>
+            </details>
+            <details class="visit-guideline" open>
+              <summary>드론 이용</summary>
+              <div class="visit-guideline__body">
+                <p>드론 촬영은 안전·사생활 보호를 위해 사전 허가된 시간대에만 가능합니다.</p>
               </div>
             </details>
           </div>
@@ -163,7 +185,10 @@
           <ul class="amenity-list">
             <li class="amenity-list__item">
               <span class="amenity-list__icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" focusable="false"><circle cx="12" cy="12" r="9" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /><path d="M10.2 7.2h2.7a2.4 2.4 0 1 1 0 4.8h-2.7v4.8" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                <svg viewBox="0 0 24 24" focusable="false">
+                  <rect x="3.5" y="4" width="17" height="16" rx="2.5" ry="2.5" fill="none" stroke="currentColor" stroke-width="1.6" />
+                  <path d="M9.2 16V8.2h3.8a2.4 2.4 0 0 1 0 4.8H9.2" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
               </span>
               <span class="amenity-list__text">무료주차장 완비 — 주차 걱정 없이 방문하세요.</span>
             </li>
@@ -177,54 +202,20 @@
               <span class="amenity-list__icon" aria-hidden="true">
                 <svg viewBox="0 0 24 24" focusable="false"><rect x="3" y="6" width="18" height="12" rx="2.5" ry="2.5" fill="none" stroke="currentColor" stroke-width="1.6" /><path d="M3 10.5h18" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" /><path d="M6.5 15h4" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" /><path d="M15.5 15h2.5" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" /></svg>
               </span>
-              <span class="amenity-list__text">지역화폐 및 다양한 결제 수단 지원 — 탐나는전, 카드, 모바일 결제 가능.</span>
+              <span class="amenity-list__text">지역화폐 및 다양한 결제 수단 지원 — 탐나는전, 카드, 모바일 결제 가능합니다.</span>
             </li>
             <li class="amenity-list__item">
               <span class="amenity-list__icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" focusable="false"><circle cx="12" cy="5.5" r="2" fill="currentColor" /><path d="M8 9.5h8M12 9.5l2.7 4.6h3.1" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" /><path d="M12 11.6 10 16.2a3.3 3.3 0 1 0 1.6.7" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                <svg viewBox="0 0 24 24" focusable="false">
+                  <circle cx="11" cy="5.5" r="2" fill="currentColor" />
+                  <path d="M11 7.5v4.2l3 1.4" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+                  <circle cx="9" cy="18" r="3.2" fill="none" stroke="currentColor" stroke-width="1.6" />
+                  <path d="M9 18.2 12 13h4.2l2 5.8" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
               </span>
-              <span class="amenity-list__text">휠체어 접근 가능 — 완만한 진입로와 보조 동선을 안내해 드립니다.</span>
-            </li>
-            <li class="amenity-list__item">
-              <span class="amenity-list__icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" focusable="false"><path d="M12 3.2a6.3 6.3 0 0 0-6.3 6.3c0 3.2 2.6 6.3 6.3 11.3 3.7-5 6.3-8.1 6.3-11.3A6.3 6.3 0 0 0 12 3.2Zm0 9.2a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" fill="currentColor" /></svg>
-              </span>
-              <span class="amenity-list__text">계절별 추천 코스 — 매표소에서 맞춤 방문 지도를 받아보세요.</span>
+              <span class="amenity-list__text">휠체어 이용 가능 — 완만한 진입로와 보조 동선을 안내해 드립니다.</span>
             </li>
           </ul>
-        </div>
-      </section>
-
-      <section id="visit-directions" class="tab-panel tab-panel--section" role="tabpanel" tabindex="0" hidden>
-        <div class="visit-section visit-section--map" aria-labelledby="section-directions">
-          <div class="visit-section__header">
-            <span class="visit-section__label">Directions</span>
-            <h2 id="section-directions" class="visit-section__title">오시는 길</h2>
-            <p class="visit-section__lead">네비게이션에서 ‘가시림’ 또는 ‘가시림 수목원’을 검색해 주세요. 제주공항에서 자동차로 약 1시간 거리에 위치해 있습니다.</p>
-          </div>
-          <div class="visit-map__layout">
-            <figure class="visit-map__frame">
-              <div class="visit-map__badge">3266 가시리</div>
-              <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.384523347821!2d126.74911287548557!3d33.36102587342499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d05ab91c5e7d3%3A0xd9b9442adb7e6c06!2sGasirim!5e0!3m2!1sen!2sus!4v1759572278539!5m2!1sen!2sus"></iframe>
-            </figure>
-            <aside class="visit-map__details">
-              <h3 class="visit-map__title">제주특별자치도 서귀포시 표선면 가시리 3266</h3>
-              <dl class="오시는길">
-                <div class="오시는길__row">
-                  <dt>자동차 (1시간) </dt>
-                  <dd>제주국제공항 → 번영로 → 표선면 방면</dd>
-                </div>
-                <div class="오시는길__row">
-                  <dt>버스 (1시간 30분) </dt>
-                  <dd>제주국제공항 → 121번 혹은 120번 이용 → 표선고등학교 정류장 하차 → 732-2번 이용  → 안좌동 정류장 하차  → 도보 5분</dd>
-                </div>
-                <div class="오시는길__row">
-                  <dt>택시 (1시간) </dt>
-                  <dd>공항에서 약 35,000원 내외, 기사님께 ‘가시림 수목원’으로 말씀해 주세요.</dd>
-                </div>
-              </dl>
-            </aside>
-          </div>
         </div>
       </section>
 
@@ -265,6 +256,7 @@
           </div>
         </div>
       </section>
+      </div>
     </main>
 
     <!-- Footer (loaded from /partials/footer.html) -->
@@ -275,5 +267,6 @@
   <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
   <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
   <script src="assets/js/main.js" defer></script>
+  <script src="assets/js/intro-tabs.js" defer></script>
 </body>
 </html>
